update application open function